kubernetes-yaml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project
  namespace: gantry
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: project
